<resources>
    <string name="app_name">XPense</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!--TextViews-->
    <string name="main_string">Main:</string>
    <string name="main_temp">Some sort of welcome maybe?</string>
    <string name="date_view">Date: </string>
    <string name="amount_view">Amount: $</string>
    <string name="type_view">Type: </string>
    <string name="trip_view">Trip: </string>
    <string name="description_view">Description: </string>
    <string name="receipt_view">Receipt: </string>
    <string name="start_date">Start date: </string>
    <string name="end_date">End date: </string>
    <string name="notes_view">Notes: </string>
    <string name="destination_view">Destination: </string>

    <string name="summary_string">Summary:</string>
    <string name="summary_temp_string">Here we allow a user to select a trip to view expenses from</string>

    <string name="add_string">Add:</string>
    <string name="expense_label">Add an expense</string>
    <string name="trip_label">Or add a trip</string>

    <string name="travel_mode_string">Travel Mode:</string>
    <string name="travel_mode_prompt_string">Activate Travel Mode:</string>
    <string name="travel_mode_temp">Here goes travel mode</string>

    <!--Buttons:-->
    <string name="summary_button">Summary</string>
    <string name="add_button">Add</string>
    <string name="travel_mode_button">Travel Mode</string>
    <string name="add_receipt">Add</string>
    <string name="add_trip_button">Trip</string>
    <string name="add_expense_button">Expense</string>

    <string name="expense_choose_type">Type</string>
    <string name="set">Set</string>

    <string-array name="expense_types">
        <item>Food</item>
        <item>Lodging</item>
        <item>Gas</item>
        <item>Car Rental</item>
        <item>Other</item>
    </string-array>
</resources>
